use max-width of 65.33 to fix overflow on 800x600 displays

--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -23,7 +23,7 @@
 	
 	.row {
 		width: 100%;
-		max-width: 940px;
+		max-width: 65.33vw;
 		margin: 0 auto;
 		position: relative;
 		padding: 0 2%;
@@ -90,7 +90,6 @@
 	nav ul a {
 		color: $color-light;
 		text-transform: uppercase;
-		font-size: 12px;
 		font-family: Lato;
 		font-size: 12px;
 		font-weight: 900;
